Ajuste no locale

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -9,7 +9,7 @@
   "Back to home": "Voltar para o início",
   "Email cannot be blank.": "Email não pode ser vazio.",
   "Featured": "Em destaque",
-  "Get the latest posts delivered right to your inbox.": "Receba nossos artigos mais novos diretamente na sua caixa de entrada.",
+  "Get the latest posts delivered right to your inbox.": "Receba meus artigos mais novos diretamente na sua caixa de entrada.",
   "Go to the home page": "Ir para o início",
   "No posts": "Nenhum artigo",
   "No posts found": "Nenhum artigo encontrado",
